# Rust-onchain-backtester

./: .gitignore  Cargo.toml  README.md  crypto_backtest.ipynb  custom_dataset.ipynb  equity_curve_analysis.ipynb  mean_reversion.ipynb  on-chain-analysis.ipynb  regime_detection.ipynb  requirements.txt  rustfmt.toml  time_to_200_trades.ipynb  trading_analysis.ipynb  velocity_analysis.ipynb  vol_trade.ipynb
src/: Crypto Pnl Analysis.ipynb  framework.rs  lib.rs  strategies.rs
src/framework/: backtesting_framework.rs  fees.rs  manipulation_detector.rs
src/strategies/: common_config.rs  copy_trading.rs  helpers.rs  hurst_exponent.rs  inter_trade.rs  mean_reversion_sell_exhaustion.rs  order_flow_imbalance.rs  order_flow_imbalance_mod.rs  signed_trade_velocity.rs  strategy_base.rs  temp.rs  vwap.rs  z_score.rs  z_score_modified.rs
