[package]
name = "rust-backtester"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.49", features = ["lazy", "csv", "temporal", "strings", "dtype-datetime"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
indexmap = "2.0"
rayon = "1.8"
tqdm = "0.6"
indicatif = { version = "0.17", features = ["rayon"] }

[lib]
name = "rust_backtester"
path = "src/lib.rs"

[[bin]]
name = "test_vwap"
path = "src/bin/test_vwap.rs"

[[bin]]
name = "test_zscore"
path = "src/bin/test_zscore.rs"

[[bin]]
name = "test_copy_trading"
path = "src/bin/test_copy_trading.rs"

[[bin]]
name = "vwap_param_optimizer"
path = "src/bin/vwap_param_optimizer.rs"

[[bin]]
name = "zscore_param_optimizer"
path = "src/bin/zscore_param_optimizer.rs"
